grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: grafana.gps-watch.kz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-test
            port:
              name: service
